<resources>
    <string name="app_name" translatable="false">Quarantime</string>
    <string name="comorbidities">Comorbidities</string>
    <string name="select_preferred_language">Select Preferred Language</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="user_type_patient">Patient</string>
    <string name="user_type_officer">Officer</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_valid_email">Enter a valid Email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="reset_password_caption">Please enter your Email Address to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="enter_otp_caption">Please enter the OTP we have sent to</string>
    <string name="verify">Verify</string>
    <string name="resend_in">Resend in : </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_new_password">Please Enter a new Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="change">Change</string>
    <string name="good_morning">Good Morning,</string>
    <string name="good_evening">Good Evening,</string>
    <string name="register_new_patients">Register new Patients</string>
    <string name="view_patients">View Patients</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="area_overview">Area Overview</string>
    <string name="as_at">As at :</string>
    <string name="area">Area :</string>
    <string name="critical_condition">Critical Condition</string>
    <string name="patients">Patients</string>
    <string name="register_patient">Register Patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_nic">Patient NIC</string>
    <string name="home_address">Home Address</string>
    <string name="contact_no">Contact No</string>
    <string name="pick_location">Pick Location</string>
    <string name="location_coordinates">Location Coordinates</string>
    <string name="pick_hospital">Pick Hospital</string>
    <string name="hospital_authority">Hospital Authority</string>
    <string name="generate">Generate</string>
    <string name="register">Register</string>
    <string name="view_all">View All</string>
    <string name="all_patients">All Patients</string>
    <string name="status">Status :</string>
    <string name="normal_condition">Normal Condition</string>
    <string name="contact_no_2">Contact No :</string>
    <string name="health">Health :</string>
    <string name="current_condition">Current Condition :</string>
    <string name="severe">Severe</string>
    <string name="normal">Normal</string>
    <string name="last_update">Last Update :</string>
    <string name="health_status">Health Status</string>
    <string name="critical">Critical</string>
    <string name="patient_records">Patient Records</string>
    <string name="officer_profile">Officer Profile</string>
    <string name="edit_information">Edit Information</string>
    <string name="full_name">Full Name</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="intro_caption_1">Health Status</string>
    <string name="intro_caption_2"><![CDATA[Measure SPo2 & BPM]]></string>
    <string name="intro_caption_3">Emergency Contacts</string>
    <string name="intro_content_1">Quarantime will enable you to update your current health status so that the health authorities could keep monitoring your health status.</string>
    <string name="intro_content_2">The Provided Pulse Oximeter along with Quarantime application will send your measured data to the authorities in-order to keep in touch.</string>
    <string name="intro_content_3">Quarantime application will let you contact nearest health officers ASAP during extreme situations.</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="measure_now">Measure Now</string>
    <string name="record_history">Record History</string>
    <string name="last_measurements">Last Measurements</string>
    <string name="how_do_you_feel_now">How do you feel now?</string>
    <string name="headache">Headache</string>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="sore_totat">Sore Totat</string>
    <string name="shortness_of_breath">Shortness of Breath</string>
    <string name="measure_caption_1">Turn on Pulse Oximeter</string>
    <string name="measure_caption_2">Connect with Pulse Oximeter</string>
    <string name="measure_caption_3">Place Finger</string>
    <string name="measure_content_1">Please turn on your Pulse Oximeter using the power switch at the top. Once powered on the LED indicator will turn Blue</string>
    <string name="measure_content_2">Turn on your WiFi and search the Pulse Oximeter device and connect to the pulse oximeter using the SSID.</string>
    <string name="measure_content_3">Place your finger on the Pulse Oximeter and the device will start measuring data. The measured data will displayed on screen once started.</string>
    <string name="skip">Skip</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="connect_device">Connect Device</string>
    <string name="available_devices">Available Devices</string>
    <string name="search_devices">Search Devices</string>
    <string name="ssid">SSID :</string>
    <string name="device_type">Device Type :</string>
    <string name="measure_data">Measure Data</string>
    <string name="done">Done</string>
    <string name="oxygen">Oxygen</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="measured_data">Measured Data</string>
    <string name="monitoring">Monitoring...!</string>
    <string name="spo2_level">SpO2 Level</string>
    <string name="measurement_history">Measurement History</string>
    <string name="average_spo2">Average SpO2</string>
    <string name="time">Time</string>
    <string name="spo2">SpO2 :</string>
    <string name="bpm">BPM :</string>
    <string name="result">Result :</string>
    <string name="connection_lost">An available internet connection is required to perform this operation.</string>
    <string name="i_am_a">I am a</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="sign_out">Sign out</string>
    <string name="last_10_measurements">Last 10 Measurements</string>
    <string name="please_wait">Please wait!</string>
    <string name="operation_timeout_error">Operation timeout please retry!</string>
    <string name="user_not_found_error">User not found!</string>
    <string name="invalid_credentials_error">Invalid Username or Password!</string>
    <string name="server_error">Server error, Please try again!</string>
    <string name="no_records_error">No records found!</string>
    <string name="application_error">Application Error. Please Retry!</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="connection_error">Connection Error</string>
    <string name="otp_failed">OTP Failed</string>
    <string name="could_not_send_otp">Could not send OTP, Please try again!</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_no_match">The entered OTP does not match!</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="otp_sent_message">Please check your email to find your OTP. Make sure to check \'Spam\' folder.</string>
    <string name="cant_change_password">Could not change password, Please try again!</string>
    <string name="password_validation">Password should contain at least 6 characters.</string>
    <string name="password_no_match">Passwords does not match</string>
    <string name="password_changed">Password Changed!</string>
    <string name="password_changed_message">Passwords changed successfully.</string>
    <string name="critical_patients">Critical Patients</string>
    <string name="normal_patients">Normal Patients</string>
    <string name="select_comorbidities">Select Comorbidities</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_nic">Invalid NIC</string>
    <string name="enter_valid_name">Enter a valid name</string>
    <string name="enter_valid_address">Enter valid address</string>
    <string name="enter_valid_contact_no">Enter a valid contact no</string>
    <string name="remove_patient">Remove patient</string>
    <string name="remove_patient_caption">You are about to remove this patient record. Which will remove the record on the patient database.</string>
    <string name="remove">Remove</string>
    <string name="sign_out_caption">Sign out from the application will require you to perform a re sign-in to the application. Are you sure you want to Sign Out?</string>
    <string name="generate_password">Generate a password</string>
    <string name="select_hospital">Select Hospital</string>
    <string name="select_hospital_caption">Please select a hospital</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="profile_updated_caption">Profile information updated successfully</string>
    <string name="application_will_restart">* Application will restart</string>
    <string name="need_permission">Need Permission</string>
    <string name="need_permission_caption">The Application will need WiFi permissions</string>
    <string name="location_off">Location is off</string>
    <string name="location_off_caption">Please turn on location on your device</string>
    <string name="wifi_off">Wifi</string>
    <string name="wifi_off_caption">If WiFi is turned off please turn on WiFi</string>
    <string name="permission_granted">permission granted</string>
    <string name="pulse_oximeter">Pulse Oximeter</string>
    <string name="access_point">Access Point</string>
    <string name="invalid_device">Invalid Device</string>
    <string name="invalid_device_caption">The selected device is not a pulse oximeter</string>
    <string name="connection_steps">Connection Steps</string>
    <string name="connection_instruction_0">1) Turn off mobile data connection</string>
    <string name="connection_instructions_1">2) Open your Wifi Settings</string>
    <string name="connection_instruction_2">3) Connect with your Pulse Oximeter or use the QR on the box to quick connect.</string>
    <string name="connection_instruction_3">4) Use the provided password on the box to connect.</string>
    <string name="connection_instruction_4">5) Return Back to this application</string>
    <string name="open_wifi">Open WiFi</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="unknown_device_caption">The connected pulse oximeter could not be found or the application doesn\'t recognize the device. Continue anyway?</string>
    <string name="continue_operation">Continue</string>
    <string name="symptoms_updated">Symptoms Updated</string>
    <string name="symptoms_updated_caption">Your symptoms were updated successfully</string>
    <string name="data_updated">Data updated!</string>
    <string name="pulse_oximeter_data_error">Could not read data from Pulse Oximeter</string>
    <string name="finger_out">Finger out</string>
    <string name="waiting">Waiting...!</string>
</resources>