<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".Activity.Patient.PatientConnectDevice">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_8sdp"
        android:layout_height="@dimen/_16sdp"
        android:background="@drawable/ic_back" />

    <TextView
        android:id="@+id/text_connect_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnBack"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/connect_device"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sdp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_below="@id/text_connect_device"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="connect_with_device.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/text_connection_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnOpenWifi"
        android:layout_alignBottom="@id/btnOpenWifi"
        android:fontFamily="@font/gilroy_semi_bold"
        android:gravity="center"
        android:text="@string/connection_steps"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:id="@+id/btnOpenWifi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/animationView"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/container_blue"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/open_wifi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/text_instructions_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_connection_steps"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/connection_instructions_1"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/text_instructions_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_instructions_1"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/gilroy_medium"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/connection_instruction_2"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/text_instructions_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_instructions_2"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/gilroy_medium"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/connection_instruction_3"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/text_instructions_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_instructions_3"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/gilroy_medium"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/connection_instruction_4"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:background="@drawable/button_light_blue_round"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />

</RelativeLayout>