<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".Activity.Auth.ForgotPassActivityNewPass">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="change_password.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/text_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/animationView"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/gilroy_bold"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/enter_new_password"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:id="@+id/containerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_caption"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/new_password"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/gilroy_medium"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerPassword"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/confirm_password"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/gilroy_medium"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/containerConfirmPassword"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/button_light_blue_round"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />

</RelativeLayout>