<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".Activity.Auth.SignInActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_8sdp"
        android:layout_height="@dimen/_15sdp"
        android:background="@drawable/ic_back" />

    <TextView
        android:id="@+id/text_sign_in_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnBack"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/sign_in_with"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12sdp" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:layout_below="@id/text_sign_in_with"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/app_logo"
        android:transitionName="app_logo" />

    <LinearLayout
        android:id="@+id/container_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/i_am_a"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp" />

        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/switchLanguage"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="14sp"
            app:colorBorder="@color/blue"
            app:colorOn="@color/blue"
            app:on="false"
            app:textOff="@string/user_type_patient"
            app:textOn="@string/user_type_officer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_user_type"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/containerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/email_address"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/password"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_10sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_35sdp"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/imgToggle"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:paddingBottom="@dimen/_10sdp"
                    android:src="@drawable/ic_visibility_off" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/container_inputs"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:background="@drawable/button_light_blue_round"
        android:fontFamily="@font/gilroy_semi_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />

</RelativeLayout>